updates to fixtures around related items and citations, updates to edit page to support

--- a/app/views/hydrus_items/_related_item.html.erb
+++ b/app/views/hydrus_items/_related_item.html.erb
@@ -1,5 +1,5 @@
-<%- title = defined?(node) ? node.at_css('titleInfo title').content : "" -%>
-<%- url = defined?(node) ? node.at_css("identifier").content : "" -%>
+<%- title = defined?(item) ? item.title : "" -%>
+<%- url = defined?(item) ? item.url : "" -%>
 <div class="destroy-set">
   <div class="row related-item">
     <%= hydrus_form_label do  %>
