--- a/app/views/hydrus_items/show.html.erb
+++ b/app/views/hydrus_items/show.html.erb
@@ -59,22 +59,26 @@
     <dt>Cite this item as: </dt>
     <dd><%= @document_fedora.preferred_citation %></dd>
 
-    <dt>Cite related work as: </dt>
-    <% @document_fedora.citations.each do |citation| %>
-      <dd><%= citation.text %></dd>
-    <% end %>
-
+    <% unless @document_fedora.citations.size == 0 %>
+			<dt>Cite related work as: </dt>
+	    <% @document_fedora.citations.each do |citation| %>
+	      <dd><%= citation.text %></dd>
+	    <% end %>
+		<% end %>
+		
     <dt>Publisher: </dt>
     <dd><%= @document_fedora.publisher %></dd>
 
     <dt>Publication date: </dt>
     <dd><%= @document_fedora.publication_date %></dd>
 
-    <% @document_fedora.related_items.each do |related_item| %>
-      <dt>Related content: </dt>
-      <dd><%= link_to(related_item.title, related_item.url) %></dd>
-    <% end %>
-
+    <% unless @document_fedora.related_items.size == 0 %>
+			<dt>Related content: </dt>
+	    <% @document_fedora.related_items.each do |related_item| %>
+	      <dd><%= link_to(related_item.title, related_item.url) %></dd>
+	    <% end %>
+		<% end %>
+		
     <dt>Files: </dt>
     <dd>
       <table class="hydrus-striped-table table-striped table-condensed">
